@@ -2,6 +2,7 @@ package org.rdfhdt.hdt.dictionary.impl;
 
 import org.rdfhdt.hdt.compact.bitmap.Bitmap;
 import org.rdfhdt.hdt.compact.bitmap.ModifiableBitmap;
+import org.rdfhdt.hdt.compact.integer.VByte;
 import org.rdfhdt.hdt.dictionary.Dictionary;
 import org.rdfhdt.hdt.dictionary.DictionaryDiff;
 import org.rdfhdt.hdt.dictionary.DictionarySection;
@@ -14,24 +15,25 @@ import org.rdfhdt.hdt.dictionary.impl.utilDiff.DiffWrapper;
 import org.rdfhdt.hdt.listener.ProgressListener;
 import org.rdfhdt.hdt.options.ControlInfo;
 import org.rdfhdt.hdt.options.ControlInformation;
+import org.rdfhdt.hdt.util.LiteralsUtils;
 import org.rdfhdt.hdt.util.io.IOUtil;
+import org.rdfhdt.hdt.util.string.ByteString;
 
-import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 
 public class MultipleSectionDictionaryDiff implements DictionaryDiff {
 
     private final String location;
-    private final HashMap<String,CatMapping> allMappings = new HashMap<>();
+    private final Map<ByteString,CatMapping> allMappings = new HashMap<>();
     private CatMapping mappingBack;
     public long numShared;
     public MultipleSectionDictionaryDiff(String location){
@@ -48,21 +50,23 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
         }
     }
     @Override
-    public void diff(Dictionary dictionary, Map<String, ModifiableBitmap> bitmaps, ProgressListener listener) throws IOException {
-        allMappings.put("predicate",new CatMapping(location,"predicate",dictionary.getPredicates().getNumberOfElements()));
-        allMappings.put("subject",new CatMapping(location,"subject",dictionary.getSubjects().getNumberOfElements()));
+    public void diff(Dictionary dictionary, Map<CharSequence, ModifiableBitmap> bitmaps, ProgressListener listener) throws IOException {
+        allMappings.put(SectionUtil.SECTION_PREDICATE,new CatMapping(location,SectionUtil.SECTION_PREDICATE,dictionary.getPredicates().getNumberOfElements()));
+        allMappings.put(SectionUtil.SECTION_SUBJECT,new CatMapping(location,SectionUtil.SECTION_SUBJECT,dictionary.getSubjects().getNumberOfElements()));
         int countSubSection = 0;
 
-        for (Map.Entry<String, DictionarySection> next : dictionary.getAllObjects().entrySet()) {
-            String subPrefix = "sub"+countSubSection;
-            if(next.getKey().equals("NO_DATATYPE")){
-                subPrefix = "NO_DATATYPE";
+        for (Map.Entry<? extends CharSequence, DictionarySection> next : dictionary.getAllObjects().entrySet()) {
+            ByteString subPrefix;
+            if(next.getKey().equals(LiteralsUtils.NO_DATATYPE)){
+                subPrefix = LiteralsUtils.NO_DATATYPE;
+            } else {
+                subPrefix = SectionUtil.createSub(countSubSection);
             }
-            allMappings.put(subPrefix,new CatMapping(location,subPrefix,next.getValue().getNumberOfElements()));
+            allMappings.put(subPrefix, new CatMapping(location,subPrefix,next.getValue().getNumberOfElements()));
             countSubSection++;
         }
-        allMappings.put("object",new CatMapping(location,"object",dictionary.getNAllObjects()));
-        allMappings.put("shared",new CatMapping(location,"shared",dictionary.getShared().getNumberOfElements()));
+        allMappings.put(SectionUtil.SECTION_OBJECT,new CatMapping(location,SectionUtil.SECTION_OBJECT,dictionary.getNAllObjects()));
+        allMappings.put(SectionUtil.SECTION_SHARED,new CatMapping(location,SectionUtil.SECTION_SHARED,dictionary.getShared().getNumberOfElements()));
 //        allMappings.put("shared_o",new CatMapping(location,"shared_o",dictionary.getShared().getNumberOfElements()));
 
         // Predicates
@@ -70,7 +74,7 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
 
         Iterator<? extends CharSequence> predicates = dictionary.getPredicates().getSortedEntries();
 //        CatWrapper itAddPreds = new CatWrapper(predicates,"predicate");
-        DiffWrapper itSkipPreds = new DiffWrapper(predicates,predicatesBitMap,"predicate");
+        DiffWrapper itSkipPreds = new DiffWrapper(predicates,predicatesBitMap,SectionUtil.SECTION_PREDICATE);
 
 //        ArrayList<Iterator<CatElement>> listAddPred = new ArrayList<>();
 //        listAddPred.add(itAddPreds);
@@ -88,7 +92,7 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
         Iterator<? extends CharSequence> subjects = dictionary.getSubjects().getSortedEntries();
 
 //        CatWrapper itAddSubs = new CatWrapper(subjects,"subject");
-        DiffWrapper itSkipSubs = new DiffWrapper(subjects,subjectsBitMap,"subject");
+        DiffWrapper itSkipSubs = new DiffWrapper(subjects,subjectsBitMap,SectionUtil.SECTION_SUBJECT);
 
 //        ArrayList<Iterator<CatElement>> listAddSubj = new ArrayList<>();
 //        listAddSubj.add(itAddSubs);
@@ -108,25 +112,26 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
 
 
         // Objects ----------------------------+++++++++++++++++++++++++++++++++----------------------------------------
-        ArrayList<String> dataTypes = new ArrayList<>();
-        HashMap<String,Long> offsets = new HashMap<>();
+        List<ByteString> dataTypes = new ArrayList<>();
+        Map<ByteString,Long> offsets = new HashMap<>();
 
         int countSection = 0;
         long totalObjects = 0;
-        for (Map.Entry<String, DictionarySection> next : dictionary.getAllObjects().entrySet()) {
+        for (Map.Entry<? extends CharSequence, DictionarySection> next : dictionary.getAllObjects().entrySet()) {
             int type = 4 + dataTypes.size();
-            if(next.getKey().equals("NO_DATATYPE")){
+            ByteString key = ByteString.of(next.getKey());
+            if(key.equals(LiteralsUtils.NO_DATATYPE)){
                 long numNoDataType = createNoDataTypeSection(bitmaps, dictionary,totalObjects,type);
                 if(numNoDataType > 0){
-                    dataTypes.add("NO_DATATYPE");
-                    offsets.put("NO_DATATYPE",totalObjects);
+                    dataTypes.add(LiteralsUtils.NO_DATATYPE);
+                    offsets.put(LiteralsUtils.NO_DATATYPE,totalObjects);
                     totalObjects+= numNoDataType;
                 }
             }else {
-                Bitmap objectsBitMap = bitmaps.get(next.getKey());
-                Iterator<? extends CharSequence> objects = dictionary.getAllObjects().get(next.getKey()).getSortedEntries();
+                Bitmap objectsBitMap = bitmaps.get(key);
+                Iterator<? extends CharSequence> objects = dictionary.getAllObjects().get(key).getSortedEntries();
 
-                String subPrefix = "sub"+countSection;
+                ByteString subPrefix = SectionUtil.createSub(countSection);
                 DiffWrapper itSkipObjs = new DiffWrapper(objects, objectsBitMap, subPrefix);
 
                 ArrayList<Iterator<CatElement>> listSkipObjs = new ArrayList<>();
@@ -135,8 +140,8 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
                 long numObject = objectsBitMap.countOnes();
                 // append the data types of the new dictionary if the section still exists ( number of elts > 0 )
                 if (numObject > 0) {
-                    dataTypes.add(next.getKey());
-                    offsets.put(next.getKey(),totalObjects);
+                    dataTypes.add(key);
+                    offsets.put(key,totalObjects);
                 }
                 totalObjects += numObject;
                 SectionUtil.createSection(location, numObject, type, new CatUnion(listSkipObjs), new CatUnion(new ArrayList<>()), allMappings, 0,null);
@@ -150,11 +155,11 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
 
         Iterator<? extends CharSequence> shared = dictionary.getShared().getSortedEntries();
 
-        DiffWrapper sharedSubj = new DiffWrapper(shared, sharedSubjBitMap,"shared");
+        DiffWrapper sharedSubj = new DiffWrapper(shared, sharedSubjBitMap,SectionUtil.SECTION_SHARED);
 
         shared = dictionary.getShared().getSortedEntries();
 
-        DiffWrapper sharedObj = new DiffWrapper(shared,sharedObjBitMap,"shared");
+        DiffWrapper sharedObj = new DiffWrapper(shared,sharedObjBitMap,SectionUtil.SECTION_SHARED);
 
         ArrayList<Iterator<CatElement>> listShared = new ArrayList<>();
         listShared.add(new CatIntersection(sharedSubj,sharedObj));
@@ -167,9 +172,9 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
         }
 
         listShared = new ArrayList<>();
-        sharedSubj = new DiffWrapper(dictionary.getShared().getSortedEntries(), sharedSubjBitMap,"shared");
+        sharedSubj = new DiffWrapper(dictionary.getShared().getSortedEntries(), sharedSubjBitMap,SectionUtil.SECTION_SHARED);
 
-        sharedObj = new DiffWrapper(dictionary.getShared().getSortedEntries(), sharedObjBitMap,"shared");
+        sharedObj = new DiffWrapper(dictionary.getShared().getSortedEntries(), sharedObjBitMap,SectionUtil.SECTION_SHARED);
         listShared.add(new CatIntersection(sharedSubj,sharedObj));
 
         SectionUtil.createSection(location,numShared,1,new CatUnion(listShared),new CatUnion(new ArrayList<>()),allMappings,0,listener);
@@ -184,74 +189,73 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
 
         try (OutputStream out = new FileOutputStream(location + "dictionary")) {
             ci.save(out);
-            byte[] buf = new byte[100000];
-            for (int i = 1; i <= 3 +dataTypes.size(); i++) {
-                if(i == 4) { // write literals map before writing the objects sections
-                    out.write(dataTypes.size());
-                    for (String datatype : dataTypes){
-                        out.write(datatype.length());
-                        IOUtil.writeBuffer(out, datatype.getBytes(), 0, datatype.getBytes().length, listener);
-                    }
-                }
-                try (InputStream in = new FileInputStream(location + "section" + i)) {
-                    int b;
-                    while ((b = in.read(buf)) >= 0) {
-                        out.write(buf, 0, b);
-                    }
-                }
-                Files.delete(Paths.get(location + "section" + i));
+            for (int i = 1; i <= 3; i++) {
+                Files.copy(Path.of(location + "section" + i), out);
+                Files.delete(Path.of(location + "section" + i));
+            }
+            VByte.encode(out, dataTypes.size());
+            for (ByteString datatype : dataTypes) {
+                IOUtil.writeSizedBuffer(out, datatype.getBuffer(), listener);
+            }
+            for (int i = 0; i < dataTypes.size(); i++) {
+                Files.copy(Path.of(location + "section" + (4 + i)), out);
+                Files.delete(Path.of(location + "section" + (4 + i)));
             }
         }
         // create global objects mapping from section by section mappings
         long oldId = 0;
         countSection = 0;
-        for (Map.Entry<String, DictionarySection> next : dictionary.getAllObjects().entrySet()) {
-            String dataType = next.getKey();
-            String subPrefix = "sub"+countSection;
-            if(dataType.equals("NO_DATATYPE"))
-                subPrefix = dataType;
+        for (CharSequence dataType : dictionary.getAllObjects().keySet()) {
+            ByteString subPrefix;
+            ByteString dataTypeB = ByteString.of(dataType);
+            if(dataTypeB.equals(LiteralsUtils.NO_DATATYPE)) {
+                subPrefix = LiteralsUtils.NO_DATATYPE;
+            } else {
+                subPrefix = SectionUtil.createSub(countSection);
+            }
 
-            if(allMappings.containsKey(subPrefix)){
+            if (allMappings.containsKey(subPrefix)) {
                 CatMapping mapping = allMappings.get(subPrefix);
                 for (int i = 0; i < mapping.getSize(); i++) {
                     long newId = mapping.getMapping(i);
-                    if (mapping.getType(i) != 1 && offsets.containsKey(dataType)) {
-                        newId = newId + offsets.get(dataType);
+                    Long offset;
+                    if (mapping.getType(i) != 1 && (offset = offsets.get(dataTypeB)) != null) {
+                        newId = newId + offset;
                     }
-                    allMappings.get("object").set(oldId, newId, (int) mapping.getType(i));
+                    allMappings.get(SectionUtil.SECTION_OBJECT).set(oldId, newId, (int) mapping.getType(i));
                     oldId++;
                 }
             }
             countSection++;
         }
-        mappingBack = new CatMapping(location,"back",numSubj+numShared);
+        mappingBack = new CatMapping(location,SectionUtil.BACK,numSubj+numShared);
 
         if(mappingBack.getSize() > 0 ) {
-            for (int i = 0; i < allMappings.get("shared").getSize(); i++) {
-                long type = allMappings.get("shared").getType(i);
+            for (int i = 0; i < allMappings.get(SectionUtil.SECTION_SHARED).getSize(); i++) {
+                long type = allMappings.get(SectionUtil.SECTION_SHARED).getType(i);
                 if (type == 1) {
-                    mappingBack.set(allMappings.get("shared").getMapping(i) - 1, i + 1, 1);
+                    mappingBack.set(allMappings.get(SectionUtil.SECTION_SHARED).getMapping(i) - 1, i + 1, 1);
                 } else if(type == 2){
-                    mappingBack.set(allMappings.get("shared").getMapping(i) + numShared - 1, i + 1, 2);
+                    mappingBack.set(allMappings.get(SectionUtil.SECTION_SHARED).getMapping(i) + numShared - 1, i + 1, 2);
                 }
             }
 
-            for (int i = 0; i < allMappings.get("subject").getSize(); i++) {
-                long type = allMappings.get("subject").getType(i);
+            for (int i = 0; i < allMappings.get(SectionUtil.SECTION_SUBJECT).getSize(); i++) {
+                long type = allMappings.get(SectionUtil.SECTION_SUBJECT).getType(i);
                 if ( type == 1) {
-                    mappingBack.set(allMappings.get("subject").getMapping(i) - 1, (i + 1 + (int) dictionary.getNshared()), 1);
+                    mappingBack.set(allMappings.get(SectionUtil.SECTION_SUBJECT).getMapping(i) - 1, (i + 1 + (int) dictionary.getNshared()), 1);
                 } else if(type == 2){
-                    mappingBack.set(allMappings.get("subject").getMapping(i) + numShared - 1, (i + 1 + (int) dictionary.getNshared()), 2);
+                    mappingBack.set(allMappings.get(SectionUtil.SECTION_SUBJECT).getMapping(i) + numShared - 1, (i + 1 + (int) dictionary.getNshared()), 2);
                 }
             }
         }
 
     }
-    private long createNoDataTypeSection(Map<String, ModifiableBitmap> bitmaps,Dictionary dictionary,long numObjectsAlreadyAdded,int type) throws IOException {
-        Bitmap objectsBitMap = bitmaps.get("NO_DATATYPE");
-        Iterator<? extends CharSequence> objects = dictionary.getAllObjects().get("NO_DATATYPE").getSortedEntries();
+    private long createNoDataTypeSection(Map<CharSequence, ModifiableBitmap> bitmaps,Dictionary dictionary,long numObjectsAlreadyAdded,int type) throws IOException {
+        Bitmap objectsBitMap = bitmaps.get(LiteralsUtils.NO_DATATYPE);
+        Iterator<? extends CharSequence> objects = dictionary.getAllObjects().get(LiteralsUtils.NO_DATATYPE).getSortedEntries();
 
-        DiffWrapper itSkipObjs = new DiffWrapper(objects, objectsBitMap,"NO_DATATYPE");
+        DiffWrapper itSkipObjs = new DiffWrapper(objects, objectsBitMap, LiteralsUtils.NO_DATATYPE);
 
         ArrayList<Iterator<CatElement>> listSkipObjs = new ArrayList<>();
         listSkipObjs.add(itSkipObjs);
@@ -285,11 +289,11 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
         public boolean hasNext() {
 
             while (sectionIter.hasNext()){
-                CharSequence element = sectionIter.next();
+                ByteString element = ByteString.of(sectionIter.next());
 
                 if( (flag == 0 && bitmapSub.access(count) && !bitmapObj.access(count)) || ( flag == 1 && bitmapObj.access(count) && !bitmapSub.access(count)) ){
                     ArrayList<CatElement.IteratorPlusPosition> IDs = new ArrayList<>();
-                    IDs.add(new CatElement.IteratorPlusPosition("shared",count+1));
+                    IDs.add(new CatElement.IteratorPlusPosition(SectionUtil.SECTION_SHARED,count+1));
                     next = new CatElement(element,IDs);
                     count++;
                     return true;
@@ -314,7 +318,8 @@ public class MultipleSectionDictionaryDiff implements DictionaryDiff {
             return i;
         }
     }
-    public HashMap<String, CatMapping> getAllMappings() {
+    @Override
+    public Map<ByteString, CatMapping> getAllMappings() {
         return allMappings;
     }
 
